<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#150101"
    tools:context=".LoginActivity">

    <!-- HealthPass -->


    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo" />

    <!-- Login to your Account -->
    <TextView
        android:id="@+id/login_to_yo"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="260dp"
        android:gravity="top"
        android:text="@string/login_to_yo"
        android:textAppearance="@style/login_to_yo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/LighterBlue"
        app:boxStrokeColor="@color/blue">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:background="@color/white"
            android:ems="15"
            android:hint="Email"
            android:textColor="@color/LighterBlue"
            android:textColorHint="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/LighterBlue"
        app:boxStrokeColor="@color/blue"
        >

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="360dp"
            android:background="@color/white"
            android:ems="15"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/LighterBlue"
            android:textColorHint="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_SignIn"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"
        android:background="@color/blue"
        android:elevation="4dp"
        android:text="Sign in" />

    <!-- Don’t have an account? Sign up -->
    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="515dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="top"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_" />

    <TextView
        android:id="@+id/Sign_Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="120dp"
        android:layout_marginTop="515dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="top"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textAppearance="@style/don_t_have_" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="560dp"/>


</RelativeLayout>

